--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.1.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>io.hpb.web3</groupId>
+	<artifactId>test</artifactId>
+	<version>0.0.1</version>
+	<name>hpb-web3-test</name>
+	<description>hpb web3 test project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -65,18 +65,10 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-<!-- 
 		<dependency>
 			<groupId>io.hpb.web3</groupId>
 			<artifactId>web3-hpb</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-
- -->		
-		<dependency>
-			<groupId>io.hpb.web3</groupId>
-			<artifactId>web3-hpb</artifactId>
-			<version>2.0.3</version>
+			<version>4.0.0</version>
 		</dependency>
 
 		<dependency>
