--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ server.servlet.application-display-name=hpb web3 test application
 web3.admin-client=true
 web3.httpTimeoutSeconds=600
 
-web3.client-address=http://pub.node.hpb.io/
+#web3.client-address=http://mainnet.hpb.io/
+web3.client-address=http://192.168.0.121:8545/
